/*               Riccardo Facchetti <riccardo@master.oasi.gpa.it>          */
/*               http://www.apcupsd.com                                    */
/*               http://www.sibbald.com/apcupsd                            */
/*               ftp://ftp.apcupsd.com                                     */
/***************************************************************************/

    - Can't SET/CLEAR multiple flags: do them one by one. Fixed this
      bug in SNMP driver.
    - Added 127A and 128A cables support for dumb UPSes.
    - Implemented killpower for PowerNet MIB.
    - Implemented the SNMP driver for APC's PowerNet MIB.
    - Restructured UPSINFO so that now all the flags are contained
      into the Status bitmap.
    - *BSD should compile cleanly again.
    - Source tree is now under CVS revision control.
    - Added support for listening on specific IP addresses/subnets in
      NIS server, from Troy.
    - Doc updates, from Kern.

----> Release apcupsd-3.9.9 (18 May 2002)
    - Applied final Kern's patch.
    - Added a little program 'devicedbg' to help in debugging device
      drivers with gdb. To compile, 'make devicedbg' in src/.
    - Cygwin platform added (reorganized old cygwin files).
    - Darwin platform added.
    - compile line is 'gcc -c -g -O2   -I../include  apcaction.c'.
    - reviewed all the platform makefiles.
    - use system libgd, searching for include files in system include dirs.
    - in case system does not have libgd, uses provided libgd.
    - put gd1.2 into master's contrib directory and a message if gd1.2
      is not present into src/gd1.2 (like default distribution will not)
      is issued at configure time to get gd1.2 from contrib and extract it
      into the src/ directory. Re-run config and all will be good and happy.
    - Sources reorganization.
    - Mandrake platform added.

----> Release apcupsd-3.9.8 (27 January 2002)
    - New drivers layer adds new keywords to the UPSTYPE configuration