@@ -6,6 +6,7 @@
 /*               ftp://ftp.apcupsd.com                                     */
 /***************************************************************************/
 
+    - Made sp_flags private to the dumb driver.
     - Can't SET/CLEAR multiple flags: do them one by one. Fixed this
       bug in SNMP driver.
     - Added 127A and 128A cables support for dumb UPSes.
